--- a/EsGiorno03/style.css
+++ b/EsGiorno03/style.css
@@ -59,6 +59,33 @@ a {
   background-color: white;
 }
 
+.image {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 100px;
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
+}
+
+.image img {
+  display: block;
+  width: 350px;
+  height: 350px;
+  border-radius: 50%;
+  border: 2px solid black;
+  opacity: 0.5;
+  transition: all 1s ease-in;
+  z-index: 1;
+  object-fit: cover;
+}
+
+.image img:hover {
+  opacity: 1;
+  transform: scale(1.2) rotate(50deg);
+}
+
 @media only screen and (max-width: 1023px) {
   .hamburger {
     display: block;
