--- a/EsGiorno03/style.css
+++ b/EsGiorno03/style.css
@@ -84,6 +84,7 @@ a {
 .image img:hover {
   opacity: 1;
   transform: scale(1.2) rotate(50deg);
+  transition: all 1s ease-in 0.2s;
 }
 
 @media only screen and (max-width: 1023px) {
