--- a/Es_Angular/es1Giorno2/src/app/link/link.component.html
+++ b/Es_Angular/es1Giorno2/src/app/link/link.component.html
@@ -7,7 +7,7 @@
   <h2 *ngIf="showList">{{ listTitle }}</h2>
   <ul *ngIf="showList">
     <li *ngFor="let link of linkList">
-      {{ link.titolo }} - {{ link.link }}
+      {{ link.titolo }} - <a href="#">{{ link.link }}</a>
     </li>
   </ul>
   <div *ngIf="showWarning">Attenzione: Valore non valido!</div>
